Test Sandbox Project/src/objects/Approvall__c.object
<CustomObject>
    <fields>
        <fullName>Approval_Request__c</fullName>
        <label>Approval Request</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Refund Saldo</fullName>
                </value>
                <value>
                    <fullName>Transfer Dana</fullName>
                </value>
                <value>
                    <fullName>Ubah Moderasi</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Case__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Case</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>Approval</relationshipLabel>
        <relationshipName>Approval</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Remarks__c</fullName>
        <label>Remarks</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>In Progress</fullName>
                </value>
                <value>
                    <fullName>Done</fullName>
                </value>
                <value>
                    <fullName>Rejected</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Approval</label>
    <nameField>
        <displayFormat>App-{000}</displayFormat>
        <label>Approval</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Approval</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>